--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </table>
         </div>
       </div>
-      <div class="attribution">Coded by <a href="#">Mariia Beliak</a></div>
+      <div class="attribution">Coded by <a href="https://github.com/MariiaBeliak/Omlet">Mariia Beliak</a></div>
     </main>
   </body>
 </html>
